[workspace]
members = [
    "packages/ec_curve",
    "packages/sss",
    "contracts/sss-contract",
    "contracts/paillier-contract"
]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch.crates-io]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", rev = "f7e2b1dbf11e113e258d796288752503a5012367", package = "cosmwasm-std" }
