[package]
name = "unstoppable_secrets"
version = "0.1.0"
authors = ["SecretTemplateExample"]
edition = "2021"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]

[dependencies]
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
schemars = "0.8.11"
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", rev = "f7e2b1dbf11e113e258d796288752503a5012367" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", rev = "f7e2b1dbf11e113e258d796288752503a5012367" }
cw-storage-plus = { version = "0.14.0", default-features = false }

# Used only for schema generation
cosmwasm-schema = { version = "1.1.0", optional = true }

# Uncomment these for some common extra tools
#secret-toolkit-crypto = { version = "0.6.0", features = ["rand", "hash"]}
hex = "0.4.3"
base32 = "0.4.0"
thiserror = "1.0"

rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

scrt_sss = { path = "../packages/sss" }
#k256 = { version = "0.11", default-features = false }
# ff = "0.13.0"
#generic-array = "0.12"
#ff = "0.13.0"
#rand = { version = "0.8.5", default-features = false }
sha2 = "0.10.6"
bincode2 = "2.0.1"
#
#ursa_sharing = { version = "0.1.0", git = "https://github.com/hyperledger/ursa"}

[dev-dependencies]
rand = "0.8.5"

[[bin]]
name = "schema"
required-features = ["schema"]

