[package]
name = "unstoppable_secrets_paillier"
version = "0.1.0"
authors = ["SecretTemplateExample"]
edition = "2021"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]

[dependencies]
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
schemars = "0.8.11"
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", rev = "f7e2b1dbf11e113e258d796288752503a5012367" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", rev = "f7e2b1dbf11e113e258d796288752503a5012367" }
cw-storage-plus = { version = "0.14.0", default-features = false }
cosmwasm-schema = { version = "1.1.0", optional = true }
thiserror = "1.0"
bincode2 = "2.0.1"
paillier = { git = "https://github.com/scrtlabs/rust-paillier", rev = "e4d6d296bc88208f20f381e1b7a868b3110a5ab2" }
# paillier = { path = "../../../rust-paillier" }
getrandom = { version = "0.2.8", features = ["js"] }

[[bin]]
name = "schema"
required-features = ["schema"]
